--- a/registry-service/src/main/resources/application.properties
+++ b/registry-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=registry-service
+# =========== MySQL Config ============
+spring.datasource.url=jdbc:mysql://localhost:3306/userWeather
+spring.datasource.username=root
+spring.datasource.password=myUserRoot
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# =========== JPA Settings ============
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
