make sure app runs corectly

--- a/registry-service/src/main/resources/application.properties
+++ b/registry-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+jwt.secret=8k9*Y3w!s#LdQ@pW#7$^xGn2vBz%RkLq
