add discovery client

--- a/registry-service/src/main/resources/application.properties
+++ b/registry-service/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 jwt.secret=8k9*Y3w!s#LdQ@pW#7$^xGn2vBz%RkLq
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
